--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,26 @@
 ---
-theme :
-  name : twitter
+layout: default
 ---
-{% include JB/setup %}
-{% include themes/twitter/default.html %}
+<!DOCTYPE html>
+<html lang="en" class="page  {{ page.page-class }}">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
+
+</head>
+<body>
+
+<div class="page-header">
+  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
+</div>
+
+<div class="date">
+      <span>{{ page.date | date_to_long_string }}</span>
+    </div>
+    <div class="content">
+      {{ content }}
+    </div>
+
+
+</body>
+</html>    
