--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,10 @@
 ---
 layout: default
 ---
-{% include JB/setup %}
-{% include themes/twitter/post.html %}
+<article class="post">
+
+    <h1>{{ page.title }}</h1>
+
+    {{ content }}
+
+</article>
