Some structure to the page

--- a/assets/sass/roberto.scss
+++ b/assets/sass/roberto.scss
@@ -25,7 +25,7 @@
 /**
  * Template-specific stuff
  */
-
+@import "templates/header";
 @import "templates/links";
 @import "templates/typography";
 
