--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,20 @@ layout: default
 {% include header.html %}
 {% include nav.html %}
 
-<div class="page-header">
-  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
-</div>
+<div class="main" role="main">
+	<div class="page-header">
+	  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
+	</div>
 
-<div class="date">
-      <span>{{ page.date | date_to_long_string }}</span>
-    </div>
+	<div class="date">
+	    <span>{{ page.date | date_to_long_string }}</span>
+	 </div>
+	    
     <div class="content">
       {{ content }}
     </div>
+
+</div>    
 
 {% include footer.html %}
 
