--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
  <header class="page-head">
-                        
-            <ul class="nav  site-nav">
-                <li><a href="/">Home</a></li><!--
-             --><li><a href="/about/">About</a></li><!--
-             --><li><a href="/blog/">Blog</a></li>
-             <li><a href="/work/">Work</a></li>
-            </ul>
+                
+    <ul class="nav nav--stacked">
+        <li><a href="/">Home</a></li><!--
+     --><li><a href="/about/">About</a></li><!--
+     --><li><a href="/blog/">Blog</a></li>
+     <li><a href="/work/">Work</a></li>
+    </ul>
             
-        </header><!-- /page-head -->
+</header><!-- /page-head -->
