--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,6 @@
  <header class="page-head">
+
+ 	<h1>Robert Carroll is a writer, editor and programmer</h1>
                 
     <ul class="nav nav--stacked">
         <li><a href="/">Home</a></li><!--
