--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -1,5 +1,6 @@
 .page-head {
   @include gs-span(d, 1);
   padding-top: 8em;
-  @include gs-pad(d, padinfull);
+  padding-left: 1em;
+  padding-right: 1em;
 }
