--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,8 @@ layout: default
 	<div class="date">
 	    <span>{{ page.date | date_to_long_string }}</span>
 	 </div>
+
+	 {% capture truncated_content %}  {{ page.content | truncatewords: 250 }}{% endcapture %}{% if page.content != truncated_content %}  {{ page.content | number_of_words | append: '.0' | divided_by:180 | append: 'min' }}{% endif %}
 	    
     
       {{ content }}
