--- a/assets/sass/roberto.scss
+++ b/assets/sass/roberto.scss
@@ -25,6 +25,7 @@
 /**
  * Template-specific stuff
  */
+@import "templates/fonts";
 @import "templates/header";
 @import "templates/links";
 @import "templates/main";
