--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,9 @@
 
     <link rel="stylesheet" href="/assets/build/roberto.css">
 
+    <script type="text/javascript" src="//use.typekit.net/ltx5lhb.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 </head>
 <body>
 
