--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -69,7 +69,7 @@ $base-line-height:  26px!default;
  * Base font-family.
  */
 
-$base-font-family: jubilatregular, Georgia, Times, "Times New Roman", serif;
+$base-font-family: ff-tisa-web-pro, Georgia, Times, "Times New Roman", serif;
 
 
 
