--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,10 +1,13 @@
 	<div class="page-header">
-	  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
+	  <h1>
+	  	{% if page.title %}
+    <a href="{{ root_url }}{{ page.url }}">{{ page.title }}</a>
+{% endif %}
+{% if post.title %}
+    <a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
+{% endif %}
+	  </h1>
 	</div>
-
-	<div class="date">
-	    <span>{{ page.date | date_to_long_string }}</span>
-	 </div>
     
       {{ content }}
       
