--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,14 +1,7 @@
-	<div class="page-header">
-	  <h1>
-	  	{% if page.title %}
-    <a href="{{ root_url }}{{ page.url }}">{{ page.title }}</a>
-{% endif %}
-{% if post.title %}
-    <a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
-{% endif %}
-	  </h1>
-	</div>
-    
-      {{ content }}
-      
-    </div>
+<ul >
+    {% for post in site.posts limit 4 %}
+    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+        {{ post.content | strip_html | truncatewords:75}}<br>
+            <a href="{{ post.url }}">Read more...</a><br><br>
+    {% endfor %}
+</ul>
