Updates to the homepage.

--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,7 +1,13 @@
 <ul >
-    {% for post in site.posts limit 4 %}
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
-        {{ post.content | strip_html | truncatewords:75}}<br>
+    {% for post in site.posts limit:1 %}
+    <li>
+    	
+    	<a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
+    	<span>{{ post.date | date_to_string }}</span> 
+    
+        {{ post.content | strip_html | truncatewords:25}}<br>
             <a href="{{ post.url }}">Read more...</a><br><br>
+     </li>       
+
     {% endfor %}
 </ul>
