--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -73,7 +73,19 @@ $base-font-family: ff-tisa-web-pro, Georgia, Times, "Times New Roman", serif;
 
 
 
-$h2-size:           30px; // .beta
+$giga-size:         96px;
+$mega-size:         72px;
+$kilo-size:         48px;
+
+$h1-size:           52px; // .alpha
+$h2-size:           47px; // .beta
+$h3-size:           35px; // .gamma
+$h4-size:           29px; // .delta
+$h5-size:           22px; // .epsilon
+$h6-size:           18px; // .zeta
+
+$milli-size:        16px;
+$micro-size:        14px;
 
 
 
