Increased body copy font size.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,10 @@ layout: default
 
 	 {% capture truncated_content %}  {{ page.content | truncatewords: 250 }}{% endcapture %}{% if page.content != truncated_content %}  {{ page.content | number_of_words | append: '.0' | divided_by:180 | append: 'min' }}{% endif %}
 	    
-    
+    <div class="main-content">	
       {{ content }}
-      
+    </div>  
+
     </div>
 
 </div>    
