--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,23 +1,14 @@
 
     {% for post in site.posts limit:1 %}
+
+    	<div class="page-header"><h1><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></h1></div>
+    	<div class="date"><span>{{ post.date | date_to_string }}</span></div> 
+        
+        <div class="main-content">  
+         {{ post.content | strip_html | truncatewords:100}}
+        </div>
+            <a href="{{ post.url }}">Read more</a>
   
-    	
-    	<a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
-    	<span>{{ post.date | date_to_string }}</span> 
-    
-        {{ post.content | strip_html | truncatewords:100}}<br>
-            <a href="{{ post.url }}">Read more...</a><br><br>
-  
-    {% endfor %}
-
-
-
-    {% for post in site.posts limit:3 %}
-    	
-    	<a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
-    	<span>{{ post.date | date_to_string }}</span> 
-    
-
     {% endfor %}
 
 Read my blog
