Tweaks to blog page layout.

--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -24,6 +24,10 @@
  	margin-bottom: $half-spacing-unit;
  }
 
+ .margin-below {
+ 	margin-bottom: $base-spacing-unit;
+ }
+
  .grey {
  	color: $watf-grey; 
  }
