--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,10 +1,10 @@
 
-    {% for post in site.posts limit:1 %}
+    {% for post in site.categories.blog limit:1 %}
 
     	<div class="page-header"><h1><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></h1></div>
     	<h2 class="epsilon italic">{{ post.date | date: "%d %B %Y" }}</h2>
         
-        <div class="main-content">  
+        <div class="main-content"> 
          {{ post.content | strip_html | truncatewords:100}}
         </div>
             <a href="{{ post.url }}">Read more</a>
