--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@ layout: default
 	  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 	</div>
 
-	<div class="date epsilon italic grey margin-below-double">
+	<div class="date epsilon italic grey margin-below">
 	    <span>{{ page.date | date_to_long_string }}</span>
 	 </div>
 	    
