--- a/assets/sass/templates/_typography.scss
+++ b/assets/sass/templates/_typography.scss
@@ -140,9 +140,9 @@
 
 	blockquote p {
 	  margin-bottom: 0;
-	  font-size: 16px;
+	  font-size: $h5-size;
 	  font-weight: 300;
-	  line-height: 25px;
+	  font-style: italic;
 	}
 
 	blockquote small {
