--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,6 @@
 ---
-layout: page
+layout: default
 ---
-{% include header.html %}
-{% include nav.html %}
 
 <div class="main" role="main">
 	
@@ -20,5 +18,4 @@ layout: page
 
 </div>    
 
-{% include footer.html %}
 
