--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,22 @@
 ---
 layout: default
 ---
-<article class="post">
+<div class="main" role="main">
+	
+<div class="content">		
 
-    {{ content }}
+	<div class="page-header">
+	  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
+	</div>
 
-</article>
+	<div class="date epsilon italic grey margin-below">
+	    <span>{{ page.date | date_to_long_string }}</span>
+	 </div>
+	    
+    <div class="main-content">	
+      {{ content }}
+    </div>  
+
+    </div>
+
+</div> 
