Changed the line height on the deck.

--- a/assets/sass/templates/_typography.scss
+++ b/assets/sass/templates/_typography.scss
@@ -95,6 +95,7 @@
 		@extend .delta;
 		font-style: italic;
 		font-weight: 400;
+		line-height: $mid-line-height;
 	}
 
 	/*  <strong>For emphasizing a snippet of text with important</strong> */
