Changed the body text colour.

--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -65,6 +65,8 @@ $use-greybox:       false;
 $base-font-size:    18px!default;
 $base-line-height:  26px!default;
 
+$base-font-color:  #333;
+
 /**
  * Base font-family.
  */
