--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,9 @@
 
     <link rel="stylesheet" href="/assets/build/roberto.css">
 
+    <link rel="shortcut icon" href="/assets//images/favicon.ico" />
+
+
     <script type="text/javascript" src="//use.typekit.net/ltx5lhb.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
