--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
  <header class="page-head">
 
- 	<h1 class="zeta">Robert Carroll is a writer, editor and programmer</h1>
+ 	<h1 class="zeta">Robert Carroll is a writer, editor and programmer. He is a principal and co-founder of <a href="http://wearethoughtfox.com/">We Are Thought Fox</a></h1>
                 
     <ul class="nav nav--stacked">
         <li><a href="/">Home</a></li><!--
