--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -5,8 +5,10 @@
   border-left: 1px solid #E2E2E2;
 
   @include respond-to(mobile) { 
-    @include gs-span(m, all);
-    @include gs-pad(m, padinfull);
+    @include gs-span(m, 2);
+    padding-top: 1em;
+    margin-right: 0;
+    border-left: none;
     clear:both;
     }
 }
@@ -17,8 +19,7 @@
   padding-right: 4em;
 
   @include respond-to(mobile) { 
-    @include gs-span(m, all);
-    @include gs-pad(m, padinfull);
+    @include gs-span(m, 2);
    
     }
  }
@@ -28,8 +29,7 @@
   padding-right: 4em;
 
   @include respond-to(mobile) { 
-    @include gs-span(m, all);
-    @include gs-pad(m, padinfull);
+    @include gs-span(m, 2);
  
     }
  }
