Updated the gridset

--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -20,6 +20,7 @@
 
   @include respond-to(mobile) { 
     @include gs-span(m, 2);
+    padding-right: 0;
    
     }
  }
@@ -30,6 +31,7 @@
 
   @include respond-to(mobile) { 
     @include gs-span(m, 2);
+    padding-right: 0;
  
     }
  }
