--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -10,6 +10,7 @@
     margin-right: 0;
     border-left: none;
     clear:both;
+    border-top: 1px solid #E2E2E2;
     }
 }
 
@@ -31,9 +32,11 @@
 
   @include respond-to(tablet) { 
     @include gs-span(m, 2);
-    padding-right: 0;
- 
+    padding-right: 0; 
     }
+
+
+
  }
 
 .main-content {
