--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -10,6 +10,10 @@
     padding-top: $half-spacing-unit;
     padding-left: 0;
     padding-right: 0;
+    position:fixed;
+    bottom:0!important;
+    left:0!important;
+    top: initial;
     }
 
 }
