--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,13 @@ layout: default
 
 	<div class="page-header">
 	  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
-	</div>
 
-	<div class="date epsilon italic grey margin-below">
+	  <div class="date">
 	    <span>{{ page.date | date_to_long_string }}</span>
 	 </div>
-	    
+
+	</div>
+
     <div class="main-content">	
       {{ content }}
     </div>  
