--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,8 +1,11 @@
 
     {% for post in site.categories.blog limit:1 %}
 
-    	<div class="page-header"><h1><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></h1></div>
-    	<h2 class="epsilon italic grey">{{ post.date | date: "%d %B %Y" }}</h2>
+    	<div class="page-header">
+    		<h1><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></h1>
+    		<h2 class="epsilon italic grey">{{ post.date | date: "%d %B %Y" }}</h2>
+    	</div>
+    	
         
         <div class="main-content"> 
          {{ post.content | strip_html | truncatewords:100}}
