--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 
  	<h1 class="zeta">Robert Carroll is a writer, editor and programmer. He is a principal and co-founder of <a href="http://wearethoughtfox.com/">We Are Thought Fox.</a></h1>
                 
-    <ul class="navigation">
+    <ul class="navigation nav">
         <li><a href="/">Home</a></li><!--
      --><li><a href="/about/">About</a></li><!--
      --><li><a href="/blog/">Blog</a></li>
