changing the nav for responsive

--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -18,8 +18,12 @@
 	@extend .nav--stacked;
   
 @include respond-to(tablet) { 
+
+  text-align:center;
   
     > li{
+
+        display:inline;
 
         &,
         > a{
