more responsive tweaks to header

--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -45,6 +45,15 @@
     }
 }
 
+.summary {
+  @extend .zeta;
+
+  @include respond-to(tablet) { 
+    margin-bottom: $half-spacing-unit;
+    }
+
+}
+
 .date {
   @extend .epsilon;
   @extend .italic;
