--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -10,6 +10,7 @@
     padding-top: $half-spacing-unit;
     padding-left: 0;
     padding-right: 0; 
+    text-align: center;
   }
 
 }
@@ -30,6 +31,7 @@
             display:inline-block;
            *display:inline;
             zoom:1;
+            padding-right: $half-spacing-unit;
         }
     }
 
