--- a/assets/sass/templates/_mixins.scss
+++ b/assets/sass/templates/_mixins.scss
@@ -14,11 +14,8 @@
 
 
 @mixin respond-to($media) {
-  @if $media == mobile {
-    @media only screen and (max-width: $break-mobile) { @content; }
-  }
-  @else if $media == tablet {
-    @media only screen and (min-width: $break-mobile + 1) and (max-width: $break-tablet) { @content; }
+  @if $media == tablet {
+    @media only screen and (max-width: $break-tablet) { @content; }
   }
   @else if $media == desktop {
     @media only screen and (min-width: $break-desktop) { @content; }
