changed the title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="page {{ page.page-class }}">
 <head>
-	<title>Robert Carroll - {{ page.title }}</title>
+	<title>{{ page.title }} - Robert Carroll | Writer, editor, web developer, digital journalist from Yorkshire</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
 
