cleaned up some files

--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -32,10 +32,11 @@
             display:inline-block;
            *display:inline;
             zoom:1;
-            padding-right: $half-spacing-unit;
+            padding-right: 9px;
         }
     }
 
   }
+
 
 }
