--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -62,6 +62,10 @@
 
 .main-content {
  	font-size: $h5-size;
+
+  @include respond-to(tablet) { 
+    font-size: $h6-size;
+    }
  }
 
 .margin-below-quarter {
