changed about page and tweaked summary line height

--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -48,6 +48,7 @@
 .summary {
 
   font-size: $h6-size;
+  line-height: $lowest-line-height;
 
   @include respond-to(tablet) { 
     margin-bottom: $half-spacing-unit;
