Changed the fonts from typkit FFtisa to Typography.com sentinal.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,7 @@
 
     <link rel="shortcut icon" href="/assets//images/favicon.ico" />
 
-
-    <script type="text/javascript" src="//use.typekit.net/ltx5lhb.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+   <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6272432/765062/css/fonts.css" />
 
 	<script type="text/javascript">
 
