--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -65,13 +65,13 @@ $use-greybox:       false;
 $base-font-size:    18px!default;
 $base-line-height:  26px!default;
 
-$base-font-color:  #333;
+$base-font-color:  #424242;
 
 /**
  * Base font-family.
  */
 
-$base-font-family: ff-tisa-web-pro, Georgia, Times, "Times New Roman", serif;
+$base-font-family: 'Sentinel SSm A', 'Sentinel SSm B', Georgia, Times, "Times New Roman", serif;
 
 
 
