Changed so shows full post on homepage instead of snippet.

--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -8,9 +8,8 @@
     	
         
         <div class="main-content"> 
-         {{ post.content | strip_html | truncatewords:100}}
-        
-            <a href="{{ post.url }}">Read more</a>
+         
+         {{ content }}
 
         </div>    
   
