Oops. should be post.content not just content.

--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -8,8 +8,7 @@
     	
         
         <div class="main-content"> 
-         
-         {{ content }}
+         {{ post.content }}
 
         </div>    
   
