--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -2,7 +2,7 @@
     {% for post in site.categories.blog limit:1 %}
 
     	<div class="page-header">
-    		<h1 class="page-title"><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></h1>
+    		<h1 class="page-title">{{ post.title }}</h1>
     		<h2 class="epsilon italic grey">{{ post.date | date: "%d %B %Y" }}</h2>
     	</div>
     	
