Added a bit of style to the readmore link

--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -119,3 +119,8 @@ img {
 	margin-top: $base-spacing-unit;
  	margin-bottom: $base-spacing-unit;
  }
+
+.controls {
+  padding-top: $base-spacing-unit;
+  padding-bottom: $base-spacing-unit;
+}
