Added Google Plus link to header.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="/assets/build/roberto.css">
 
+    <link rel="author" href="https://plus.google.com/u/0/108306243041516339541"/>
+
     <link rel="shortcut icon" href="/assets//images/favicon.ico" />
 
    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6272432/765062/css/fonts.css" />
