Added a new post.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" class="page {{ page.page-class }}">
 <head>
-	<title>{{ page.title }} - Robert Carroll | Writer, editor, web developer, digital journalist from Yorkshire</title>
-    <meta charset="UTF-8">
+	  <meta charset="UTF-8">
+    <title>{{ page.title }} - Robert Carroll | Writer, editor, web developer, digital journalist from Yorkshire</title>
+    <meta name="description" content="Robert Carroll is a digital journalist and web developer living in Holmfirth in Yorkshire." />
+    <link rel="author" href="https://plus.google.com/u/0/108306243041516339541"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index,follow" />
+    <meta property="twitter:account_id" content="14090499" />
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
 
+
     <link rel="stylesheet" href="/assets/build/roberto.css">
-
-    <link rel="author" href="https://plus.google.com/u/0/108306243041516339541"/>
-
-    <link rel="shortcut icon" href="/assets//images/favicon.ico" />
-
-   <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6272432/765062/css/fonts.css" />
-
-	<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-7490466-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+    <link rel="shortcut icon" href="/assets/images/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6272432/765062/css/fonts.css" />
 
 </head>
 <body>
