--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -143,3 +143,21 @@ img {
     width: 100%; 
     height: 100%; 
   }
+
+
+[role="contentinfo"] {
+  clear:both;
+  padding-top: 4*($base-spacing-unit);
+  padding-right: $base-spacing-unit;
+  text-align: right;
+
+
+  @include respond-to(tablet) { 
+    clear:both;
+    padding-top: 4*($base-spacing-unit);
+    padding-bottom: 2*($base-spacing-unit);
+    padding-right: $base-spacing-unit;
+    text-align: right;
+  
+    }
+} 
