--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -161,3 +161,13 @@ img {
   
     }
 } 
+
+ul {
+    margin-bottom: 22px;
+    margin-top: 12px;
+}
+
+li {
+    margin-bottom: 6px;
+    list-style: disc outside none;
+}
