Fixed up that post - at last

--- a/assets/sass/templates/_main.scss
+++ b/assets/sass/templates/_main.scss
@@ -121,6 +121,10 @@ img {
  	margin-bottom: $base-spacing-unit;
  }
 
+.small-image {
+  max-width: 250px !important;
+}
+
 .controls {
   padding-top: $base-spacing-unit;
   padding-bottom: $base-spacing-unit;
