Adding flickr plugin and testing.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,11 @@ layout: default
 		</div>
 
 	    <div class="main-content">	
-	      {{ content }}
+	     	{% for flickr_url in post.flickr %}
+			<a href="{{ flickr_url }}">{{ flickr_url | flickr_image }}</a>
+			{% endfor %}		
+
+	      	{{ content }}
 	    </div>  
 
     </div>
