--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,14 +19,13 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/styles.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
 
   <!-- Fonts -->
   <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6272432/767186/css/fonts.css" />
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}images/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}atom.xml">
