--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -75,15 +75,32 @@ body {
 
 img {
   display: block;
-  max-width: 100%;
-  margin: 0 0 1rem;
-  border-radius: 5px;
+  width: 100%;
+  height: auto;
+  max-width: 741px;
+  text-align: center;
 }
 
 img {
 	font-style: italic;
 	color: $inuit-base-grey-color-4;
 	@include inuit-font-size($inuit-heading-size-3);
+}
+
+figure {
+	margin: 0 0 1rem;
+}
+
+figcaption {
+	@include inuit-font-size($inuit-heading-size-6);
+	font-style: italic;
+	color: $inuit-base-grey-color-4;
+}
+
+figcaption:before {
+	content: '↑';
+	margin-right: $inuit-base-spacing-unit--smallest;
+	font-style: normal;
 }
 
 .button {
