--- a/_scss/footer.scss
+++ b/_scss/footer.scss
@@ -8,7 +8,7 @@ footer {
 .summary {
 	background-color: $inuit-base-grey-color-3; 
 	padding: $inuit-base-spacing-unit;
-	height: 14em;
+	height: 14rem;
 	display: flex;
 	
 	@include breakpoint(small) { 
@@ -18,12 +18,12 @@ footer {
 
 	@include breakpoint(medium) { 
 		width: 50%;
-		height: 21em;
+		height: 21rem;
 	}
 
 	@include breakpoint(large) { 
 		width: 50%;
-		height: 14em;
+		height: 14rem;
 	}
 }
 
@@ -34,24 +34,25 @@ footer {
 .elsewhere {
 	background-color: $lightPrimaryColor; 
 	padding: $inuit-base-spacing-unit;
-	height: 14em;
+	height: 14rem;
 	display: flex;
 
 	@include breakpoint(small) { 
 		@include gs-span(m, all); 
 		clear:both;
+		height: 15rem;
 	}
 
 	@include breakpoint(medium) { 
 		width: 50%;
 		clear:none;
-		height: 21em;
+		height: 21rem;
 	}
 
 	@include breakpoint(large) { 
 		width: 50%;
 		clear:none;
-		height: 14em;
+		height: 14rem;
 	}
 }
 
