--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 		  	<li><a rel="me" href="https://github.com/robertocarroll">GitHub</a></li>	    
 		    <li><a href="https://github.com/robertocarroll/ideas/issues">Ideas</a></li>
 		    <li><a rel="me" href="https://flickr.com/people/robertocarroll">Flickr</a></li>
-		    <li><a rel="me" href="https://plus.google.com/+RobertCarrollz">Flickr</a></li>
+		    <li><a rel="me" href="https://plus.google.com/+RobertCarrollz">Google</a></li>
 		    <li><a href="{{ site.baseurl }}/atom.xml">RSS</a></li>
 		  </ul>
 	</div>
