Published a few posts which have been hanging around in draft for ages.

--- a/_scss/work.scss
+++ b/_scss/work.scss
@@ -30,6 +30,7 @@
 .work-main-title {
 	@include breakpoint(small) { 
 		@include gs-span(m, 2); 
+		line-height: 1.15em;
 	}
 
 	@include breakpoint(medium) { 
