--- a/_scss/posts.scss
+++ b/_scss/posts.scss
@@ -13,11 +13,14 @@
 .post-title,
 .post-title a {
   color: #303030;
+  @include breakpoint(small) { 
+		line-height: 1.15em;
+	}
 }
 .page-title,
 .post-title {
   margin-top: $inuit-base-spacing-unit;
-  margin-bottom: 0;
+  margin-bottom: $inuit-base-spacing-unit--smallest;
 }
 
 // Meta data line below post title
