--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,6 @@
   <!-- RSS -->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}atom.xml">
 
+  <script src="{{ site.baseurl }}javascripts/jquery.1.10.2.min.js"> </script>
+
 </head>
