--- a/css/styles.scss
+++ b/css/styles.scss
@@ -8,9 +8,7 @@
 @import "css3-mixins";
 @import "base";
 @import "code";
-@import "cv";
 @import "footer";
-@import "headings";
 @import "home";
 @import "journal";
 @import "layout";
@@ -19,7 +17,7 @@
 @import "message";
 @import "pagination";
 @import "posts";
-@import "type";
+@import "typography";
 @import "work";
 
 
