--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,18 +1,22 @@
 <head>
+
+  <!-- Basic Page Needs
+  ================================================== -->
+  <html lang="en">
   <meta charset="UTF-8">
   <link href="http://gmpg.org/xfn/11" rel="profile">
-
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="description" content="{{ site.title }}" />
-	<meta name="author" content="{{ site.title }}" />
-	<meta property="twitter:account_id" content="{{ site.author.twitter }}">
-	<meta content="vnU0A1i9IQWwXG4r7V8wfUj69n_IZDQyqS3TQYh7P7Y" name="google-site-verification">
+  <meta name="author" content="{{ site.title }}" />
+  <meta property="twitter:account_id" content="{{ site.author.twitter }}">
+  <meta content="vnU0A1i9IQWwXG4r7V8wfUj69n_IZDQyqS3TQYh7P7Y" name="google-site-verification">
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>{% if page.title == "Home" %}{{ site.title }} &middot; {{ site.tagline }}
-  				{% else %}{{ page.title }} &middot; {{ site.title }}{% endif %}</title>
-  				
+          {% else %}{{ page.title }} &middot; {{ site.title }}{% endif %}</title>
+
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
 
