--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,63 +1,52 @@
-<header role="banner">
+<header>
+  <div class="breadcrumb">
+    {% if page.title == "Home" %}
+    <span typeof="v:Breadcrumb" >
+      <a href="/" rel="v:url" property="v:title">Home</a>
+    </span>
+    {% else %}
+    <span typeof="v:Breadcrumb">
+      <a href="/" rel="v:url" property="v:title">@robertocarroll</a>
+    </span> →
+    <span typeof="v:Breadcrumb">
+      <a href="{{ site.baseurl }}{{ page.categories}}" rel="v:url" property="v:title">{{ page.categories}}</a>
+    </span>
+    {% endif %}
+    <span id="menu-button" class="button-open"></span>
+  </div>
 
-	<div class="breadcrumb" xmlns:v="http://rdf.data-vocabulary.org/#">
+  <nav id="the-nav">
+    <ul class="nav">
+      <li><a title="Home" href="{{ site.baseurl }}">Home</a></li>
+      <li><a title="Journal" href="/journal">Journal</a></li>
+      <li><a title="Work" href="/work">Work</a></li>
+      <li><a title="About" href="/about">About</a></li>
+    </ul>
+  </nav>
 
-	{% if page.title == "Home" %}
+  <script>
+    // hasClass
+    function hasClass(elem, className) {
+      return new RegExp(' ' + className + ' ').test(' ' + elem.className + ' ');
+    }
+    // toggleClass
+    function toggleClass(elem, className) {
+      var newClass = ' ' + elem.className.replace( /[\t\r\n]/g, " " ) + ' ';
+        if (hasClass(elem, className)) {
+            while (newClass.indexOf(" " + className + " ") >= 0 ) {
+                newClass = newClass.replace( " " + className + " " , " " );
+            }
+            elem.className = newClass.replace(/^\s+|\s+$/g, '');
+        } else {
+            elem.className += ' ' + className;
+        }
+    }
+    document.getElementById('menu-button').onclick = function() {
+        var thenav = document.getElementById('the-nav');
+        toggleClass(thenav, 'open');
+        toggleClass(this, 'button-open');
+        toggleClass(this, 'button-close');
+    }
 
-		<span typeof="v:Breadcrumb" >
-     <a href="/" rel="v:url" property="v:title">Home</a>
-   </span>
-
-		{% else %}
-
-		<span typeof="v:Breadcrumb">
-     <a href="/" rel="v:url" property="v:title">@robertocarroll</a>
-   </span> →
-
-   	<span typeof="v:Breadcrumb">
-     <a href="{{ site.baseurl }}{{ page.categories}}" rel="v:url" property="v:title">{{ page.categories}}</a>
-   </span> 
-
-		{% endif %}
-
-		<span id="menu-button" class="button-open"></span>
-
-	</div>
-
-	<nav role="navigation" id="the-nav">
-		<ul class="nav">
-					<li><a title="Home" href="{{ site.baseurl }}">Home</a></li>		  
-			    <li><a title="Journal" href="/journal">Journal</a></li>
-			    <li><a title="Work" href="/work">Work</a></li>
-			    <li><a title="About" href="/about">About</a></li>
-		</ul>
-	</nav>
-
-	<script>	
-		// hasClass
-		function hasClass(elem, className) {
-			return new RegExp(' ' + className + ' ').test(' ' + elem.className + ' ');
-		}
-		// toggleClass
-		function toggleClass(elem, className) {
-			var newClass = ' ' + elem.className.replace( /[\t\r\n]/g, " " ) + ' ';
-		    if (hasClass(elem, className)) {
-		        while (newClass.indexOf(" " + className + " ") >= 0 ) {
-		            newClass = newClass.replace( " " + className + " " , " " );
-		        }
-		        elem.className = newClass.replace(/^\s+|\s+$/g, '');
-		    } else {
-		        elem.className += ' ' + className;
-		    }
-		}
-		document.getElementById('menu-button').onclick = function() {
-				var thenav = document.getElementById('the-nav');
-		    toggleClass(thenav, 'open');
-		    toggleClass(this, 'button-open');
-		    toggleClass(this, 'button-close');
-		}
-
-
-	</script>
-
+  </script>
 </header>
