--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <!-- Basic page needs -->
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   {% if page.excerpt %}
@@ -13,7 +13,7 @@
   <meta content="vnU0A1i9IQWwXG4r7V8wfUj69n_IZDQyqS3TQYh7P7Y" name="google-site-verification">
 
   <!-- Enable responsiveness on mobile devices-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>
     {% if page.title == "Home" %}
