--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,7 +2,8 @@
 # Use a comment to ensure Jekyll reads the file to be transformed into CSS later
 # only main files contain this front matter, not partials.
 ---
-
+@import "vars";
+@import "reset";
 @import "_mixins";
 @import "gridset";
 @import "css3-mixins";
