--- a/css/styles.scss
+++ b/css/styles.scss
@@ -8,17 +8,20 @@
 @import "gridset";
 @import "css3-mixins";
 @import "base";
+@import "buttons";
 @import "code";
 @import "footer";
 @import "home";
 @import "journal";
-@import "layout";
+@import "images";
+@import "misc";
 @import "links";
 @import "masthead";
 @import "message";
 @import "pagination";
 @import "posts";
 @import "typography";
+@import "tables";
 @import "work";
 
 
